--- a/index.html
+++ b/index.html
@@ -10,66 +10,69 @@
   <title>one</title>
 </head>
 <body>
-    <nav class="nav-res">
-      <div class="lo-no">
+  <nav class="nav-res">
+    <div class="lo-no">
       <div class="logo">
         <div class="logo-img">
         </div>
       </div>
       <h1>ONE<span>&reg;</span></h1>
-      </div>
-      <hr>
-      <div class="links">
-        <a href="#"><i class="fa-solid fa-heart-pulse fa-2x1 " ></i><span>Favoritos</span></a>
-      </div>
-      <hr>
-  <div class="links">
-    <a href="#"><i class="fa-regular fa-square-plus"></i><span>Criar Playlists</span></a>
-  </div>
-<hr>
-<div class="links">
-  <a href="#"><i class="fa-solid fa-clock-rotate-left fa-xs"></i><span>Historico</span></a>
-</div>
-<hr>
-    </nav>
-<div class="arra">
-
-</div>
-  <header class="pad">
+    </div>
+    <hr>
+    <div class="links">
+      <a href="#"><i class="fa-solid fa-heart-pulse fa-2x1 " ></i><span>Favoritos</span></a>
+    </div>
+    <hr>
+    <div class="links">
+      <a href="#"><i class="fa-regular fa-square-plus"></i><span>Criar Playlists</span></a>
+    </div>
+    <hr>
+    <div class="links">
+      <a href="#"><i class="fa-solid fa-clock-rotate-left fa-xs"></i><span>Historico</span></a>
+    </div>
+    <hr>
+  </nav>
+  <div class="arra"> </div>
 
 
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-
-        <div class="col-md-8">
-
-    <div class="input-group mb-1">
-<input type="text" class="form-control input-text" placeholder="Search...." aria-label="Recipient's username" aria-describedby="basic-addon2">
-<div class="input-group-append">
-<button class="btn btn-outline-success btn-lg" type="button"><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
-</div>
-</div>
-
-</div>
-
-        <div class="text-end">
-          <button type="button" class="btn btn-success">Login</button>
-          <button type="button" class="btn btn-outline-success">Sign-up</button>
+  <header class="pad hear">
+    <div class="lo-no">
+      <div class="logo">
+        <div class="logo-img">
         </div>
       </div>
-      <div class="pos">
-      <div class="btn-group">
-    <button type="button" class="btn btn-success btn-sm dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <i class="fa-solid fa-bars"></i>
-    </button>
-    <div class="dropdown-menu bg-success">
-      <a class="dropdown-item" href="#"><i class="fa-solid fa-heart-pulse fa-2x1 " ></i>Favoritos</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa-regular fa-square-plus"></i>Criar Playlists</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa-solid fa-clock-rotate-left fa-xs"></i>Historico</a>
     </div>
+    <div class="d-flex flex-wrap align-items-center justify-content-center">
+      <div class="col-md-8">
+
+        <div class="input-group ">
+          <input type="text" class="form-control input-text" placeholder="Search...." aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-success btn-lg" type="button"><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
+          </div>
+        </div>
+
       </div>
-  </div>
+
+      <div class="text-end">
+        <button type="button" class="btn btn-success">Login</button>
+        <button type="button" class="btn btn-outline-success">Sign-up</button>
+      </div>
+    </div>
+    <div class="pos">
+      <div class="btn-group">
+        <button type="button" class="btn btn-success btn-sm dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="dropdown-menu bg-success">
+          <a class="dropdown-item" href="#"><i class="fa-solid fa-heart-pulse fa-2x1 " ></i>Favoritos</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class="fa-regular fa-square-plus"></i>Criar Playlists</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class="fa-solid fa-clock-rotate-left fa-xs"></i>Historico</a>
+        </div>
+      </div>
+    </div>
   </header>
   <main class="pad">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -83,7 +86,15 @@
   </main>
 
 
-
+  <footer class="pad">
+    <div class="lo-no">
+      <div class="logo">
+        <div class="logo-img">
+        </div>
+      </div>
+      <h1>ONE<span>&reg;</span></h1>
+    </div>
+  </footer>
 
   <script type="text/javascript">
   var dere=document.querySelector(".nav-res"),maus;
@@ -97,7 +108,7 @@
       if(pad<330){
         document.querySelectorAll(".pad")[0].style.paddingLeft=pad+"px";
         document.querySelectorAll(".pad")[1].style.paddingLeft=pad+"px";
-        //document.querySelectorAll(".pad")[2].style.paddingLeft=pad+"px";
+        document.querySelectorAll(".pad")[2].style.paddingLeft=pad+"px";
       }
     }
   }
@@ -117,7 +128,7 @@
   window.addEventListener("touchmove",res_tag);
   </script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
