--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/9f72a03fbd.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon-16x16.png"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>one</title>
 </head>
@@ -75,60 +76,190 @@
     </div>
   </header>
   <main class="pad">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </main>
+    <div class="conteu">
+      <h2>ONE Playlists</h2>
+      <a href="#" class="nav-link p-0 text-muted show-all">Mostrar Mais</a>
 
-
-  <footer class="pad">
-    <div class="lo-no">
-      <div class="logo">
-        <div class="logo-img">
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/rapp.jpeg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
         </div>
-      </div>
-      <h1>ONE<span>&reg;</span></h1>
+        <p>Rap/Hip-Hop</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/rock.jpg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Rock</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/pop.jpg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Pop</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/lofi.jpg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Lo-Fi</p>
+      </div></a>
     </div>
-  </footer>
+  <div>
+    <hr>
+    <div class="conteu">
+      <h2>Novos Albuns</h2>
+      <a href="#" class="nav-link p-0 text-muted show-all">Mostrar Mais</a>
 
-  <script type="text/javascript">
-  var dere=document.querySelector(".nav-res"),maus;
-  dere.style.width="125px";
-  function res_tag(){
-    if(dere.style.width!="125px"){
-      var val=(dere.style.width[3]=='p') ? dere.style.width[0] + dere.style.width[1]
-      +dere.style.width[2] : dere.style.width[0]+dere.style.width[1];
-      var num=125-val;
-      var pad=150-(num);
-      if(pad<330){
-        document.querySelectorAll(".pad")[0].style.paddingLeft=pad+"px";
-        document.querySelectorAll(".pad")[1].style.paddingLeft=pad+"px";
-        document.querySelectorAll(".pad")[2].style.paddingLeft=pad+"px";
-      }
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/froid.jpeg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Froid-Gado</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/gori.jpg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Gorillaz-Gorillaz</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/bl.jpg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+      <p>Black Swan-Generation Mind</p>
+      </div></a>
+      <a href="#" class="mus-play"><div class="img-mus">
+        <img src="imgs/djonga.jpeg" alt="">
+        <div class="but-play">
+          <i class="fa-solid fa-play"></i>
+        </div>
+        <p>Djonga-O Dono do Lugar</p>
+      </div>
+    </a>
+    </div>
+
+  <div>
+    <hr>
+    <h2>Popular Mês</h2>
+    <table class="table table-hover table-dark table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Top</th>
+          <th scope="col">Artista</th>
+          <th scope="col">Musica</th>
+          <th scope="col">Views</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>???</td>
+          <td>???</td>
+          <td>???</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>???</td>
+          <td>???</td>
+          <td>???</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>???</td>
+          <td>???</td>
+          <td>???</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</main>
+
+<footer class="pad row border-top border-success">
+  <div class="lo-no">
+    <div class="logo">
+      <div class="logo-img">
+      </div>
+      <div class="logo-cpy">
+      </div>
+      <div class="logo-cpy1">
+      </div>
+    </div>
+    <h1>ONE<span>&reg;</span></h1>
+  </div>
+  <section class="mb-4 col">
+    <a class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://wa.me/5538992146362" role="button"><i class="fab fa-whatsapp"></i></a>
+    <a class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://github.com/Joao-vls" role="button"><i class="fab fa-github"></i></a>
+  </section>
+  <div class="col">
+    <h5>Empresa</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Sobre</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Legal</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Termos de serviço</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Política dos Cookies</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Política de Privacidade</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <h5>Suporte</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Ajuda</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Feedback</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Chat</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Contato</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <h5>Comunidades</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Artistas</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Desenvolvedores</a></li>
+      <li class="nav-item mb-2" style="width:100px;"><a href="#" class="nav-link p-0 text-muted">Empresas</a></li>
+    </ul>
+  </div>
+</footer>
+
+<script type="text/javascript">
+var dere=document.querySelector(".nav-res"),maus;
+dere.style.width="125px";
+function res_tag(){
+  if(dere.style.width!="125px"){
+    var val=(dere.style.width[3]=='p') ? dere.style.width[0] + dere.style.width[1]
+    +dere.style.width[2] : dere.style.width[0]+dere.style.width[1];
+    var num=125-val;
+    var pad=150-(num);
+    if(pad<330){
+      document.querySelectorAll(".pad")[0].style.paddingLeft=pad+"px";
+      document.querySelectorAll(".pad")[1].style.paddingLeft=pad+"px";
+      document.querySelectorAll(".pad")[2].style.paddingLeft=pad+"px";
     }
   }
-  var click=0;
-  document.querySelector(".arra").addEventListener("mousedown",()=>{
-    click=1;
-  })
-  window.addEventListener("mouseup",()=>{click=0;});
-  window.addEventListener("mouseleave",()=>{click=0;});
-  window.addEventListener("mousemove",(e)=>{
-    if (click && e.clientX>=40 && e.clientX<=300) {
-      document.querySelector(".nav-res").style.width=e.clientX+"px";
-      document.querySelector(".arra").style.left=e.clientX+"px";
-    }
-    res_tag();
-  });
-  window.addEventListener("touchmove",res_tag);
-  </script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+}
+var click=0;
+document.querySelector(".arra").addEventListener("mousedown",()=>{
+  click=1;
+})
+window.addEventListener("mouseup",()=>{click=0;});
+window.addEventListener("mouseleave",()=>{click=0;});
+window.addEventListener("mousemove",(e)=>{
+  if (click && e.clientX>=40 && e.clientX<=300) {
+    document.querySelector(".nav-res").style.width=e.clientX+"px";
+    document.querySelector(".arra").style.left=e.clientX+"px";
+  }
+  res_tag();
+});
+window.addEventListener("touchmove",res_tag);
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
