--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <p>Gorillaz-Gorillaz</p>
       </div></a>
       <a href="#" class="mus-play"><div class="img-mus">
-        <img src="imgs/bl.jpg" alt="">
+        <img src="imgs/tyler.jpeg" alt="">
         <div class="but-play">
           <i class="fa-solid fa-play"></i>
         </div>
-      <p>Black Swan-Generation Mind</p>
+      <p>Tyler, the Creator-Flower Boy</p>
       </div></a>
       <a href="#" class="mus-play"><div class="img-mus">
         <img src="imgs/djonga.jpeg" alt="">
